// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News card component should match snapshot for a blog post 1`] = `
<div>
  <article
    class="newsCard "
  >
    <a
      aria-hidden="true"
      class="imageContainer"
      href="/i/am/a-very-full-slug"
      style="background-image: url(http://local-host-test-nice-org.com/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
      tabindex="-1"
    >
       
    </a>
    <div>
      <h3
        class="heading"
      >
        <a
          href="/i/am/a-very-full-slug"
        >
          Test blog post title
        </a>
      </h3>
      <p
        class="blogIntroText"
      >
        Let's play Blockbusters!
      </p>
      <footer>
        <div
          class="author"
        >
          Bob Holness
          , 
          Blockbusters host
        </div>
        <div>
          <span
            class="tag tag--outline"
            data-component="tag"
          >
            Blogs
          </span>
          <time
            class="date"
            datetime="2024-02-20"
          >
            20 February 2024
          </time>
        </div>
      </footer>
    </div>
  </article>
</div>
`;

exports[`News card component should match snapshot for a news article 1`] = `
<div>
  <article
    class="newsCard "
  >
    <a
      aria-hidden="true"
      class="imageContainer"
      href="/i/am/a-very-full-slug"
      style="background-image: url(http://local-host-test-nice-org.com/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
      tabindex="-1"
    >
       
    </a>
    <div>
      <h3
        class="heading"
      >
        <a
          href="/i/am/a-very-full-slug"
        >
          Test news article title
        </a>
      </h3>
      <p>
        Test intro text
      </p>
      <footer>
        <div>
          <span
            class="tag tag--outline"
            data-component="tag"
          >
            News
          </span>
          <time
            class="date"
            datetime="2024-01-31T15:16:15.19"
          >
            31 January 2024
          </time>
        </div>
      </footer>
    </div>
  </article>
</div>
`;

exports[`News card component should not render an image if showImage is false 1`] = `
<DocumentFragment>
  <article
    class="newsCard listItem"
  >
    <div>
      <h3
        class="heading"
      >
        <a
          href="/i/am/a-very-full-slug"
        >
          Test news article title
        </a>
      </h3>
      <p>
        Test intro text
      </p>
      <footer>
        <div>
          <span
            class="tag tag--outline"
            data-component="tag"
          >
            News
          </span>
          <time
            class="date"
            datetime="2024-01-31T15:16:15.19"
          >
            31 January 2024
          </time>
        </div>
      </footer>
    </div>
  </article>
</DocumentFragment>
`;
